--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "my-app": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
